maintainIT2/src/objects/Meter_Reading__c.object
<CustomObject>
    <description>Meter Readings</description>
    <fields>
        <fullName>Meter_ID__c</fullName>
        <description>Meter ID</description>
        <inlineHelpText>Meter ID</inlineHelpText>
        <label>Meter ID</label>
        <referenceTo>Meter__c</referenceTo>
        <relationshipLabel>Meter Readings</relationshipLabel>
        <relationshipName>Meter_Readings</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Reading_Date__c</fullName>
        <defaultValue>Now()</defaultValue>
        <description>Meter Reading Date/Time</description>
        <inlineHelpText>Meter Reading Date/Time</inlineHelpText>
        <label>Reading Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Reading_Value_Num__c</fullName>
        <description>Meter Reading Value (Numerical)</description>
        <inlineHelpText>Meter Reading Value (Numerical)</inlineHelpText>
        <label>Reading Value</label>
        <precision>14</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UOM__c</fullName>
        <description>Formula referencing Meter UOM</description>
        <formula>TEXT(Meter_ID__r.UOM__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula referencing Meter UOM</inlineHelpText>
        <label>UOM</label>
        <type>Text</type>
    </fields>
    <label>Meter Reading</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>MR-{000000000}</displayFormat>
        <label>Meter Reading ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Meter Readings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Meter_Type_NE_Virtual</fullName>
        <active>true</active>
        <description>Ensures that you cannot enter Readings Values for a Logical Meter Type</description>
        <errorConditionFormula>ISPICKVAL( Meter_ID__r.Type__c , &quot;Logical&quot;)</errorConditionFormula>
        <errorMessage>Meter Readings may not be directly entered for Logical meter types.  The meter reading for a Logical meter is inherited from its Parent Meter</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Reading_Value_LE_Last_Value</fullName>
        <active>true</active>
        <description>This validation rule tests to ensure that the current meter reading value is not less than the last meter reading value unless it is being reset to zero.</description>
        <errorConditionFormula>IF( Reading_Date__c  &gt;  Meter_ID__r.Last_Reading_Date__c , IF( ISPICKVAL(Meter_ID__r.Type__c, &quot;Continuous&quot;)  &amp;&amp;  Reading_Value_Num__c  &lt;&gt; 0 , ( Reading_Value_Num__c   &lt;   Meter_ID__r.Last_Reading_Value__c ), false), false)</errorConditionFormula>
        <errorDisplayField>Reading_Value_Num__c</errorDisplayField>
        <errorMessage>The current meter reading value cannot be less than the last meter reading value unless you are Resetting the current meter reading value to zero (0).</errorMessage>
    </validationRules>
</CustomObject>